Add connection string

--- a/PostsApi/appsettings.json
+++ b/PostsApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\instanciasql2019localdb;Database=PostsApiDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
