Add json web token secret key

--- a/PostsApi/appsettings.json
+++ b/PostsApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JWT": {
+    "Key": "afsdkjasjflxswafsd0klk4_3476wghwge-orqiwup3457u-d76sjgdj3ghghghgsd8j3kaspxmfbv31mcvsa"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\instanciasql2019localdb;Database=PostsApiDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
