Add generic repository, post service, global exception handling and static files in Startup class

--- a/PostsApi/PostsApi.csproj
+++ b/PostsApi/PostsApi.csproj
@@ -15,5 +15,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\Posts\Images\" />
+  </ItemGroup>
+
 
 </Project>
