Add Users/Avatars folders in Assets folder

--- a/PostsApi/PostsApi.csproj
+++ b/PostsApi/PostsApi.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\Posts\Images\" />
+    <Folder Include="Assets\Users\Avatars\" />
   </ItemGroup>
 
 
