Add migration files for Post model property type change

--- a/PostsApi/PostsApi.csproj
+++ b/PostsApi/PostsApi.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210414043330_Change-Post-AcceptedUserId-property-type.cs" />
+    <Compile Remove="Migrations\20210414043330_Change-Post-AcceptedUserId-property-type.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
