Put email and password settings in appsettings

--- a/PostsApi/appsettings.json
+++ b/PostsApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Email": {
+    "Email": "put email here",
+    "Password": "put password here",
+    "Name": "put name here"
+  },
   "JWT": {
     "Key": "afsdkjasjflxswafsd0klk4_3476wghwge-orqiwup3457u-d76sjgdj3ghghghgsd8j3kaspxmfbv31mcvsa"
   },
